...
  private func makeWindow() {
    let panel = DetachedPreviewPanel(contentRect: NSRect(origin: .zero, size: Self.defaultSize),
                                     styleMask: [.titled, .closable, .resizable, .utilityWindow, .nonactivatingPanel],
                                     backing: .buffered, defer: false)
    panel.title = NSLocalizedString("ShowPreview", tableName: "GeneralSettings", comment: "")
      .trimmingCharacters(in: CharacterSet(charactersIn: ":： "))
    panel.identifier = NSUserInterfaceItemIdentifier("MaccyPreview.detached-preview")
    panel.delegate = self
    panel.isReleasedWhenClosed = false
    panel.isFloatingPanel = true
    panel.hidesOnDeactivate = false
    panel.becomesKeyOnlyIfNeeded = false
    panel.level = .statusBar
...
